# bgfx.cmake

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: allocator.cpp.E0ABD69DB37C6CCD.idx  bx.cpp.60378C159E0A100A.idx  bx_p.h.6A7A0E79EA851200.idx  commandline.cpp.24E98414B7577C93.idx  crtnone.cpp.81E296BD444CD10B.idx  debug.cpp.7BCC3D384B9A0BA1.idx  dtoa.cpp.8460DCADA5C3E95C.idx  easing.cpp.DDC0B144416DCB19.idx  file.cpp.4652305A6928EF10.idx  filepath.cpp.1C5396B3CEC1505E.idx  hash.cpp.5976D421894DA1DB.idx  math.cpp.030CC9DD1F70F5D2.idx  mutex.cpp.66C7A58F4D05A1D7.idx  os.cpp.8B925687A4BF5DC0.idx  process.cpp.885ADF9020C62AD1.idx  semaphore.cpp.1B8465A628CB8D43.idx  settings.cpp.ABC2AFB1ED73E9A5.idx  sort.cpp.6483105227EB0DB8.idx  string.cpp.209D7DB38839166A.idx  thread.cpp.8AFF5ECB4081097A.idx  timer.cpp.D7146F14C6A308CF.idx  url.cpp.DA559B07854C8857.idx
cmake/bimg/: CMakeLists.txt
cmake/bx/: CMakeLists.txt
